--- a/src/templates/ztf.html
+++ b/src/templates/ztf.html
@@ -244,7 +244,7 @@
         </div>
 
         <div class="form-group">
-          <label for="objectcone"><small>Sibmad2k Search</small></label>
+          <label for="objectcone"><small>Simbad2k Search</small></label>
           <input type="text" class="form-control form-control-sm" id="objectcone" name="objectcone" value="{{ request.args.objectcone }}" placeholder="Name,Radius(&deg;)">
         </div>
 
