--- a/src/templates/sassy_bot_results.html
+++ b/src/templates/sassy_bot_results.html
@@ -10,6 +10,13 @@
  <div class="col-md-12">
   <h4>SASSyBot Records ({{ total }} found)</h4>
   <br>
+  <br>
+  <h5><font color="grey">How many alerts within the given timeframe, and between the real/bogus score limits, have
+a host
+     in the GLADE catalog within the search radius that are <i>not</i> in the TNS database and are <i>not</i> known
+solar system objects?</font></h5>
+   <br>
+   <br>
   <div class="table-responsive">
    <table class="table table-striped table-sm">
     <thead>
