--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -47,9 +47,9 @@
     <!-- homepage link -->
     <li class="nav-item"><a class="nav-link" href="{{ url_for('sassy_home') }}"><i class="fa fa-home" aria-hidden="true"></i><span class="sr-only">(current)</span></a></li>
     <!-- mail link -->
-    <li class="nav-item"><a class="nav-link" href="mailto:pndaly@email.arizona.edu"><i class="fa fa-envelope"></i></a></li>
+    <li class="nav-item"><a class="nav-link" href="mailto:pndaly@arizona.edu"><i class="fa fa-envelope"></i></a></li>
     <!-- phone link -->
-    <li class="nav-item"><a class="nav-link" href="tel:+1(520) 621-3648"><i class="fa fa-phone"></i></a></li>
+    <li class="nav-item"><a class="nav-link" href="tel:+1(520)621-3648"><i class="fa fa-phone"></i></a></li>
     <!-- help link -->
     <li class="nav-item"><a class="nav-link" href="{{ url_for('sassy_help') }}"><i class="fa fa-info" aria-hidden="true"></i></a></li>
     <!-- api link -->
