Added download lightcurve as csv

--- a/src/templates/ztf_record.html
+++ b/src/templates/ztf_record.html
@@ -105,6 +105,7 @@
         </div>
       </div>
       <div id="lightcurve"></div>
+      <p><a href="{{ url_for('ztf_get_csv', id=alert.id) }}" class="btn btn-outline-primary btn-sm btn-block">Download Light Curve As CSV</a></p>
     </div>
   </div>
 </div>
