--- a/src/templates/glade.html
+++ b/src/templates/glade.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <!--suppress ALL -->
-<!-- globl container -->
+<!-- global container -->
 <div class="container">
 
   <!-- introduction -->
@@ -384,6 +384,7 @@
         </div>
       </div>
       <!-- end of table section -->
+    </div>
   </div>
 
 <!-- end of global container -->
