--- a/src/templates/sassy_cron.html
+++ b/src/templates/sassy_cron.html
@@ -195,8 +195,9 @@
 
         <table class="table table-striped table-sm">
         <thead>
-          <th colspan="13" style="border: 1px solid black; background-color: #ffffcc;"><center>ZTF</center></th>
-          <th colspan="6" style="border: 1px solid black; background-color: #ffffcc;"><center>GLADE</center></th>
+          <th colspan="13" style="border: 1px solid black; background-color: #e6ffe6;"><center>ZTF Candidate(s)</center></th>
+          <th colspan="4" style="border: 1px solid black; background-color: #ffebcc;"><center>Alerce Classifier</center></th>
+          <th colspan="6" style="border: 1px solid black; background-color: #f2e6ff;"><center>GLADE Catalog</center></th>
         </thead>
           <thead>
             <tr>
@@ -213,6 +214,10 @@
               <th><font color="blue">Dec</font></th>
               <th><font color="blue">drb</font></th>
               <th><font color="blue">rb</font></th>
+              <th><font color="blue">Early</font></th>
+              <th><font color="blue">P(Early)</font></th>
+              <th><font color="blue">Late</font></th>
+              <th><font color="blue">P(Late)</font></th>
               <th><font color="blue">ID</font></th>
               <th><font color="blue">RA</font></th>
               <th><font color="blue">Dec</font></th>
@@ -234,6 +239,10 @@
               <th><font color="grey">J2k&deg;</font></th>
               <th><font color="grey">0-1</font></th>
               <th><font color="grey">0-1</font></th>
+              <th><font color="grey">Type</font></th>
+              <th><font color="grey">%</font></th>
+              <th><font color="grey">Type</font></th>
+              <th><font color="grey">%</font></th>
               <th><font color="grey">gid</font></th>
               <th><font color="grey">J2k&deg;</font></th>
               <th><font color="grey">J2k&deg;</font></th>
@@ -259,12 +268,12 @@
                {% else %}
                  <td>{{ "%.3f"|format(alert.zjd) }}</td>
                {% endif %}
-                {% if alert.zmagap|float("NaN") == "NaN" %}
+               {% if alert.zmagap|float("NaN") == "NaN" %}
                  <td>{{ alert.zmagap }}</td>
                {% else %}
                  <td>{{ "%.3f"|format(alert.zmagap) }}</td>
                {% endif %}
-                {% if alert.zmagpsf|float("NaN") == "NaN" %}
+               {% if alert.zmagpsf|float("NaN") == "NaN" %}
                  <td>{{ alert.zmagpsf }}</td>
                {% else %}
                  <td>{{ "%.3f"|format(alert.zmagpsf) }}</td>
@@ -294,7 +303,19 @@
                {% else %}
                  <td>{{ "%.3f"|format(alert.zrb) }}</td>
                {% endif %}
-                <td><a href="/sassy/glade_q3c/{{ alert.gid }}/" title="{{ alert.gid }}">{{ alert.gid }}</a></td>
+               <td>{{ alert.aetype }}</td>
+               {% if alert.aeprob|float("NaN") == "NaN" %}
+                 <td>{{ alert.aeprob*100.0 }}</td>
+               {% else %}
+                 <td>{{ "%.1f"|format(alert.aeprob*100.0) }}</td>
+               {% endif %}
+               <td>{{ alert.altype }}</td>
+               {% if alert.alprob|float("NaN") == "NaN" %}
+                 <td>{{ alert.alprob*100.0 }}</td>
+               {% else %}
+                 <td>{{ "%.1f"|format(alert.alprob*100.0) }}</td>
+               {% endif %}
+               <td><a href="/sassy/glade_q3c/{{ alert.gid }}/" title="{{ alert.gid }}">{{ alert.gid }}</a></td>
                {% if alert.gra|float("NaN") == "NaN" %}
                  <td>{{ alert.gra }}</td>
                {% else %}
